--- a/www.nass.gov.ng/5528b9312ad0a97c758c8ecfa95f589416853607.yml
+++ b/www.nass.gov.ng/5528b9312ad0a97c758c8ecfa95f589416853607.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 23:11:22 GMT
+    - Sat, 24 Jun 2017 04:28:47 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-A0wSJcip3nmw-3MiCVVZ0; path=/
+    - PHPSESSID=%2CFN7Z6XfkS8TwkkX1Ctl61; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 23:11:22 GMT
+recorded_at: Sat, 24 Jun 2017 04:28:47 GMT
