--- a/www.nass.gov.ng/a6ecb17b3b74700c23b979f20fc4f58871e37483.yml
+++ b/www.nass.gov.ng/a6ecb17b3b74700c23b979f20fc4f58871e37483.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 23:15:58 GMT
+    - Sat, 24 Jun 2017 04:33:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=O2NWI-6%2CQtqnaKh2c50rB0; path=/
+    - PHPSESSID=esHwXtXyUKe-lkEMLKnDg3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 23:15:58 GMT
+recorded_at: Sat, 24 Jun 2017 04:33:51 GMT
