--- a/www.nass.gov.ng/71920b2c5cd0e99e873307503d285f57b67ffeaf.yml
+++ b/www.nass.gov.ng/71920b2c5cd0e99e873307503d285f57b67ffeaf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 23:16:38 GMT
+    - Sat, 24 Jun 2017 04:35:25 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=OMXt8EqBHN8Z%2CNC4yXKhO3; path=/
+    - PHPSESSID=5ebDUGQuX5-YVcFYoy8KA1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 23:16:38 GMT
+recorded_at: Sat, 24 Jun 2017 04:35:25 GMT
