--- a/www.nass.gov.ng/4ba0edcba58a219cf5184bf7a4093f59056937bd.yml
+++ b/www.nass.gov.ng/4ba0edcba58a219cf5184bf7a4093f59056937bd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 23:21:20 GMT
+    - Sat, 24 Jun 2017 04:39:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=cTE%2C82bUk0-I6qfl6vUNb1; path=/
+    - PHPSESSID=E-Cp994m0bAcfbh%2CkNFSI1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 23:21:20 GMT
+recorded_at: Sat, 24 Jun 2017 04:39:38 GMT
