--- a/www.nass.gov.ng/a5edadbf6e4614a35c7079335c90f7e7f0c78fbc.yml
+++ b/www.nass.gov.ng/a5edadbf6e4614a35c7079335c90f7e7f0c78fbc.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 23:22:26 GMT
+    - Sat, 24 Jun 2017 04:40:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=4ElZh2cXCExYahR%2CO6MBD2; path=/
+    - PHPSESSID=C7mo-fN9BQD31ZUDGgiJi0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 23:22:26 GMT
+recorded_at: Sat, 24 Jun 2017 04:40:28 GMT
