--- a/www.nass.gov.ng/41bb896de8adb4458a2779c82cb42fff5823497e.yml
+++ b/www.nass.gov.ng/41bb896de8adb4458a2779c82cb42fff5823497e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 23:23:19 GMT
+    - Sat, 24 Jun 2017 04:41:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=gTEElpO3wBs%2CdGkOs%2Crsr1; path=/
+    - PHPSESSID=j2MJ1bNF0md3egEk66wIh2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 23:23:19 GMT
+recorded_at: Sat, 24 Jun 2017 04:41:51 GMT
