--- a/www.nass.gov.ng/bd77c292a8fded410ada5a0f412ed577e051e358.yml
+++ b/www.nass.gov.ng/bd77c292a8fded410ada5a0f412ed577e051e358.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 23:27:45 GMT
+    - Sat, 24 Jun 2017 04:45:25 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=INuHGHOjo4wT22%2ClqWep51; path=/
+    - PHPSESSID=Z0J800jj4T8ciATr4liAG1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 23:27:45 GMT
+recorded_at: Sat, 24 Jun 2017 04:45:25 GMT
