--- a/www.nass.gov.ng/e4a50148e8e3676c8b25608b433a6a6a7d28eae4.yml
+++ b/www.nass.gov.ng/e4a50148e8e3676c8b25608b433a6a6a7d28eae4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 23:28:04 GMT
+    - Sat, 24 Jun 2017 04:45:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=W7grlCaXIN%2CLQ25xoTSWO1; path=/
+    - PHPSESSID=bEepwuE-yR-dT5dbeH4%2Ci0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 23:28:04 GMT
+recorded_at: Sat, 24 Jun 2017 04:45:56 GMT
