--- a/www.nass.gov.ng/b5f411c7f1c2df9f99f5564f4b3b387cdc91e689.yml
+++ b/www.nass.gov.ng/b5f411c7f1c2df9f99f5564f4b3b387cdc91e689.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 23:29:24 GMT
+    - Sat, 24 Jun 2017 04:47:09 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=tdCJKIgDMoiz%2CzJQgU3062; path=/
+    - PHPSESSID=AN9ypRahO4Y5tNJKrEQPO1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 23:29:24 GMT
+recorded_at: Sat, 24 Jun 2017 04:47:09 GMT
