--- a/www.nass.gov.ng/ebd13e7ca6585b73968bdd679cbd92ca80c87796.yml
+++ b/www.nass.gov.ng/ebd13e7ca6585b73968bdd679cbd92ca80c87796.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 23:30:01 GMT
+    - Sat, 24 Jun 2017 04:47:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Yv79Noi-QMQwAcBfaeSLv0; path=/
+    - PHPSESSID=5OWpIn4j%2CMsGN4TTrf6g03; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 23:30:01 GMT
+recorded_at: Sat, 24 Jun 2017 04:47:28 GMT
