--- a/www.nass.gov.ng/cfdaeae95b188af0b47a5e132f3852bf3d3ae6af.yml
+++ b/www.nass.gov.ng/cfdaeae95b188af0b47a5e132f3852bf3d3ae6af.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 23:30:52 GMT
+    - Sat, 24 Jun 2017 04:48:06 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=1S4NsHXleJkk7rR2%2Cnawa3; path=/
+    - PHPSESSID=n3jejzUwcX-HT-%2CrB3TMi3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 23:30:53 GMT
+recorded_at: Sat, 24 Jun 2017 04:48:06 GMT
