--- a/www.nass.gov.ng/2b91636a9735c36443c9638ee26d4083a4b3b49d.yml
+++ b/www.nass.gov.ng/2b91636a9735c36443c9638ee26d4083a4b3b49d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 23:31:51 GMT
+    - Sat, 24 Jun 2017 04:48:49 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=kiXEEUHoaDddsLyY6W0Od0; path=/
+    - PHPSESSID=HFq2O9R8QDuvK%2CF-fcMhC1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 23:31:51 GMT
+recorded_at: Sat, 24 Jun 2017 04:48:49 GMT
