--- a/www.nass.gov.ng/92565d55660fbc44b8790f3a8634563c421f571e.yml
+++ b/www.nass.gov.ng/92565d55660fbc44b8790f3a8634563c421f571e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 23:34:41 GMT
+    - Sat, 24 Jun 2017 04:50:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=H9yldPe56hUDTF3uB6DXG1; path=/
+    - PHPSESSID=Hhi6bHNQW1%2CytMsMw-W7S1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 23:34:41 GMT
+recorded_at: Sat, 24 Jun 2017 04:50:38 GMT
