--- a/www.nass.gov.ng/da5a6c53569eb8eac1cb38a2aca8f09d5ba7f884.yml
+++ b/www.nass.gov.ng/da5a6c53569eb8eac1cb38a2aca8f09d5ba7f884.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 23:37:59 GMT
+    - Sat, 24 Jun 2017 04:53:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=gtcclznA6rDKNTls6hdzK3; path=/
+    - PHPSESSID=5QO1jvI63Z%2CewC0GnOO9P2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 23:37:59 GMT
+recorded_at: Sat, 24 Jun 2017 04:53:48 GMT
