--- a/www.nass.gov.ng/12bbaec08d312ba24f84ad642d3ea60652fe5646.yml
+++ b/www.nass.gov.ng/12bbaec08d312ba24f84ad642d3ea60652fe5646.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 23:40:02 GMT
+    - Sat, 24 Jun 2017 04:56:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Y8%2CEMtHAn-DcNVkPF8jal3; path=/
+    - PHPSESSID=cuK8q4oLRaVK2arqR8zFS0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 23:40:02 GMT
+recorded_at: Sat, 24 Jun 2017 04:56:26 GMT
