--- a/www.nass.gov.ng/23e541f20eac3f325439a1522985f6b8e2f140cf.yml
+++ b/www.nass.gov.ng/23e541f20eac3f325439a1522985f6b8e2f140cf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 23:49:14 GMT
+    - Sat, 24 Jun 2017 05:04:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=9tXOlGnbkGkTTkAlJHj4w3; path=/
+    - PHPSESSID=D-tBtLuWxdIzZU4pUBk%2CC0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 23:49:14 GMT
+recorded_at: Sat, 24 Jun 2017 05:04:34 GMT
