--- a/www.nass.gov.ng/f8cb59985283935fd75a65a5655d38728ff61607.yml
+++ b/www.nass.gov.ng/f8cb59985283935fd75a65a5655d38728ff61607.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 23:54:53 GMT
+    - Sat, 24 Jun 2017 05:08:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=vBjpNpjOgA7YSpBafF4FL0; path=/
+    - PHPSESSID=G9JYSa5W9%2CZowLgVINkc%2C2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 23:54:54 GMT
+recorded_at: Sat, 24 Jun 2017 05:08:26 GMT
