--- a/www.nass.gov.ng/afc82284e730869e7ddee6211ac162cebaaac970.yml
+++ b/www.nass.gov.ng/afc82284e730869e7ddee6211ac162cebaaac970.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Jun 2017 23:58:34 GMT
+    - Sat, 24 Jun 2017 05:11:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=qVsFYKhb-AqkLKsEK%2CeL-1; path=/
+    - PHPSESSID=lTc3RFF02OKbP7zfFnY6c2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Jun 2017 23:58:34 GMT
+recorded_at: Sat, 24 Jun 2017 05:11:35 GMT
