--- a/www.nass.gov.ng/d262b3f4a2b1dd6ad8b77c58ff613a3e529c76d4.yml
+++ b/www.nass.gov.ng/d262b3f4a2b1dd6ad8b77c58ff613a3e529c76d4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 00:02:00 GMT
+    - Sat, 24 Jun 2017 05:16:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=wkP2yVE10CkSfHyx8A5XG0; path=/
+    - PHPSESSID=9tTuj%2CSsvAdNR3%2CLBAJJZ0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 00:02:00 GMT
+recorded_at: Sat, 24 Jun 2017 05:16:51 GMT
