--- a/www.nass.gov.ng/c6cd072de70dda983ee75b2528373246d8f8b2ca.yml
+++ b/www.nass.gov.ng/c6cd072de70dda983ee75b2528373246d8f8b2ca.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 00:02:53 GMT
+    - Sat, 24 Jun 2017 05:17:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CutITGlaY-KypP5UXCj-91; path=/
+    - PHPSESSID=TKacALc-tzLGUfSfjekN33; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 00:02:53 GMT
+recorded_at: Sat, 24 Jun 2017 05:17:11 GMT
