--- a/www.nass.gov.ng/370e6b6dbd5e2db8bb9a295aba6d071f112e141f.yml
+++ b/www.nass.gov.ng/370e6b6dbd5e2db8bb9a295aba6d071f112e141f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 00:03:14 GMT
+    - Sat, 24 Jun 2017 05:17:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=8v3vqu%2CeW45gqOwhMFNGd1; path=/
+    - PHPSESSID=%2Cq657uMywIo3v%2CegTrLk00; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 00:03:14 GMT
+recorded_at: Sat, 24 Jun 2017 05:17:29 GMT
