--- a/www.nass.gov.ng/9f70f21c859151624596c06d2fd674392ce6f85b.yml
+++ b/www.nass.gov.ng/9f70f21c859151624596c06d2fd674392ce6f85b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 00:06:52 GMT
+    - Sat, 24 Jun 2017 05:21:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=XX%2Cfn59zd8hm84GGlVuTS2; path=/
+    - PHPSESSID=MESTRa7KR5-MaQ8BZnsyQ0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 00:06:52 GMT
+recorded_at: Sat, 24 Jun 2017 05:21:10 GMT
