--- a/www.nass.gov.ng/e23f0526dcfc236a7cf6cef56334d431deff7fb3.yml
+++ b/www.nass.gov.ng/e23f0526dcfc236a7cf6cef56334d431deff7fb3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 00:07:46 GMT
+    - Sat, 24 Jun 2017 05:22:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=9x3sTMFNB6fhG0GHbPByM0; path=/
+    - PHPSESSID=lEtazC2m7o4rrK%2CpT4zFK3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 00:07:46 GMT
+recorded_at: Sat, 24 Jun 2017 05:22:11 GMT
