--- a/www.nass.gov.ng/9125ed8df0b3d343edf656f8f4dff445a8187e1b.yml
+++ b/www.nass.gov.ng/9125ed8df0b3d343edf656f8f4dff445a8187e1b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 00:08:36 GMT
+    - Sat, 24 Jun 2017 05:22:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=nny6bX0mre1NK0jCFVNaj2; path=/
+    - PHPSESSID=NTM1UabLkPTUfHHW-gqW%2C2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 00:08:36 GMT
+recorded_at: Sat, 24 Jun 2017 05:22:46 GMT
