--- a/www.nass.gov.ng/3fa26d97b56f7183aff1296285516c6fbcb062ce.yml
+++ b/www.nass.gov.ng/3fa26d97b56f7183aff1296285516c6fbcb062ce.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 00:11:23 GMT
+    - Sat, 24 Jun 2017 05:24:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=hhkeAASvzAOVtQ4RELfBx2; path=/
+    - PHPSESSID=2yqkQ%2ChUXUuc9A%2COHWXn%2C1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 00:11:23 GMT
+recorded_at: Sat, 24 Jun 2017 05:24:28 GMT
