--- a/www.nass.gov.ng/c20b15ef02c4776e2a700938f273c516dc12c256.yml
+++ b/www.nass.gov.ng/c20b15ef02c4776e2a700938f273c516dc12c256.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 00:11:45 GMT
+    - Sat, 24 Jun 2017 05:24:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=UjAKdWh5cYWw4d1lnLviN1; path=/
+    - PHPSESSID=hP3hVkqkM-%2C6yEISYCwSw3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 00:11:45 GMT
+recorded_at: Sat, 24 Jun 2017 05:24:46 GMT
