--- a/www.nass.gov.ng/4d6c3cbe54405edd9c86ca311b68545aafd41559.yml
+++ b/www.nass.gov.ng/4d6c3cbe54405edd9c86ca311b68545aafd41559.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 00:18:26 GMT
+    - Sat, 24 Jun 2017 05:29:08 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=4wM0HO60RC%2CN-XV%2CxTaRS1; path=/
+    - PHPSESSID=F-qMgZGF4sElKsEzWEk-B2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 00:18:26 GMT
+recorded_at: Sat, 24 Jun 2017 05:29:09 GMT
