--- a/www.nass.gov.ng/28c83682c77652b4cc2441b390eaa493a0fb07bd.yml
+++ b/www.nass.gov.ng/28c83682c77652b4cc2441b390eaa493a0fb07bd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 02:59:27 GMT
+    - Sun, 25 Jun 2017 10:53:50 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=H7IXc2m-WJvAWRbhHPu7C1; path=/
+    - PHPSESSID=QxRmCCw2DAPZ%2CILMzohHw1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 02:59:27 GMT
+recorded_at: Sun, 25 Jun 2017 10:53:50 GMT
