--- a/www.nass.gov.ng/27bf053ffc5752fd45b50cc01a49208e51f603a1.yml
+++ b/www.nass.gov.ng/27bf053ffc5752fd45b50cc01a49208e51f603a1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 03:02:45 GMT
+    - Sun, 25 Jun 2017 10:59:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=nD88MvAt3IpvK0T2j7DSt2; path=/
+    - PHPSESSID=rv7aPNZH7h%2CWS4O1HH7XV1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 03:02:45 GMT
+recorded_at: Sun, 25 Jun 2017 10:59:11 GMT
