--- a/www.nass.gov.ng/758abe4384162d010bb84dbb07e3ead8c4ab22ed.yml
+++ b/www.nass.gov.ng/758abe4384162d010bb84dbb07e3ead8c4ab22ed.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 03:04:11 GMT
+    - Sun, 25 Jun 2017 11:00:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=sOooWtxx6R5w9iuOm2J3H1; path=/
+    - PHPSESSID=L%2C-RjmC6Iu6VKhlTc%2CBzS2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 03:04:11 GMT
+recorded_at: Sun, 25 Jun 2017 11:00:40 GMT
