--- a/www.nass.gov.ng/6a2c74f8eef443b94d2af366bd22c1af489f47b1.yml
+++ b/www.nass.gov.ng/6a2c74f8eef443b94d2af366bd22c1af489f47b1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 03:06:10 GMT
+    - Sun, 25 Jun 2017 11:02:27 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=4jUHZSFi4lssz2AV88b%2Cb1; path=/
+    - PHPSESSID=RgzWAJ1StkZJSbKMa75%2CY3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 03:06:10 GMT
+recorded_at: Sun, 25 Jun 2017 11:02:27 GMT
