--- a/www.nass.gov.ng/63d52c179504c4bee47aedc2578da61fc35c2261.yml
+++ b/www.nass.gov.ng/63d52c179504c4bee47aedc2578da61fc35c2261.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 03:07:19 GMT
+    - Sun, 25 Jun 2017 11:03:16 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=GVdSaRJXeh5tYVeaYRmhQ3; path=/
+    - PHPSESSID=P06QT%2CuxQ36RuPFdWjx%2C33; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 03:07:19 GMT
+recorded_at: Sun, 25 Jun 2017 11:03:16 GMT
