--- a/www.nass.gov.ng/e453cba713abf2acd595ca0c278bf195cede46ef.yml
+++ b/www.nass.gov.ng/e453cba713abf2acd595ca0c278bf195cede46ef.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 03:10:41 GMT
+    - Sun, 25 Jun 2017 11:05:09 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=CxWdwT6aU6Z6ddZd%2Caucb2; path=/
+    - PHPSESSID=aMp8DPbD7eD1NZTbft30j2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 03:10:41 GMT
+recorded_at: Sun, 25 Jun 2017 11:05:09 GMT
