--- a/www.nass.gov.ng/ad849c4aef002b327d1deac9829287d1bcb83853.yml
+++ b/www.nass.gov.ng/ad849c4aef002b327d1deac9829287d1bcb83853.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 03:20:46 GMT
+    - Sun, 25 Jun 2017 11:13:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=lRJ5kCi2lktWCNTiD6bwx1; path=/
+    - PHPSESSID=5Lg9IRlfJ%2CaI-s2LdSIIo0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 03:20:46 GMT
+recorded_at: Sun, 25 Jun 2017 11:13:22 GMT
