--- a/www.nass.gov.ng/006013b3879643c5847b51d31e868f9ee71a134b.yml
+++ b/www.nass.gov.ng/006013b3879643c5847b51d31e868f9ee71a134b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 03:24:40 GMT
+    - Sun, 25 Jun 2017 11:16:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=rSJ3YT8R7yrfgWZeTpJ9M0; path=/
+    - PHPSESSID=Q6lNHjgeC%2Cq6j3u%2CtMJ-Q2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 03:24:40 GMT
+recorded_at: Sun, 25 Jun 2017 11:16:10 GMT
