--- a/www.nass.gov.ng/20cd9d71c79da05060c8bbd37c2fe5c3b75512b1.yml
+++ b/www.nass.gov.ng/20cd9d71c79da05060c8bbd37c2fe5c3b75512b1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 03:26:05 GMT
+    - Sun, 25 Jun 2017 11:17:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=0ImzcOG56ftKs7Yhi34aA1; path=/
+    - PHPSESSID=3ikpe2klPq2BHudYs17%2Cv2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 03:26:06 GMT
+recorded_at: Sun, 25 Jun 2017 11:17:19 GMT
