--- a/www.nass.gov.ng/9263d9809c1aa176fe3d8f94dfc09842e30fdac6.yml
+++ b/www.nass.gov.ng/9263d9809c1aa176fe3d8f94dfc09842e30fdac6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 03:27:33 GMT
+    - Sun, 25 Jun 2017 11:19:13 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=VeYFKPRgXfqbF3mIwYeqv3; path=/
+    - PHPSESSID=otQ2zFfntq4yX%2CHCbMDrO1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 03:27:34 GMT
+recorded_at: Sun, 25 Jun 2017 11:19:13 GMT
