--- a/www.nass.gov.ng/a161c8b9c15f84fdc60cd163cbea6adcf7d58dba.yml
+++ b/www.nass.gov.ng/a161c8b9c15f84fdc60cd163cbea6adcf7d58dba.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 03:29:22 GMT
+    - Sun, 25 Jun 2017 11:21:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=CMhB%2CQxnfGpBOnSOCraZb1; path=/
+    - PHPSESSID=VDCEbNM2WgSNXkaovH6TD3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 03:29:22 GMT
+recorded_at: Sun, 25 Jun 2017 11:21:24 GMT
